fix: Clear diagnostics for other cells (#5097)
Clear diagnostics for other cells

Styles:
- smaller scrollbars in the table and tooltip
- fix padding in tooltip hover

--- a/frontend/src/css/app/codemirror.css
+++ b/frontend/src/css/app/codemirror.css
@@ -51,10 +51,10 @@
   max-height: 45vh; /* 45% of viewport height */
   max-width: 40vw; /* 40% of viewport width */
   overflow: auto;
+  scrollbar-width: thin;
 
   /* Respect newlines. */
   border-radius: 4px;
-  padding: 0.625rem 0.875rem;
 }
 
 /* Hover tooltips get highest priority in display. */
